--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-use-websocket": "^4.5.0"
+    "react-use-websocket": "^4.5.0",
+    "react-icons-kit": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.23",
